# kabot2026

./: 깃허브에 커밋하는 법.txt  명령어 모음.txt
isv/: package.xml  setup.cfg  setup.py
isv/launch_isv/: Lidar_Preprocess.py  control_panel.py  course1.py  course2.py  course2_NO_GPS.py  course3.py  detect.py  detection_test.py  get_gps.py  gps.py  gps_publish.py  gps_pursue.py  isv_2026.py  isv_params.yaml  lidar_process.py  obstacle_isv.py  pursue_lidar.py  status3_test.py
isv/launch_isv/test_code/: test_EMO.py  test_GPS.py  test_IMU.py  test_LED.py  test_LiDAR.py  test_buzzer.py  test_key.py  test_led.py  test_thruster.py
mechaship/iahrs_ros2_driver/iahrs_ros2_driver/param/: config.yaml
mechaship/mechaship_bringup/: CMakeLists.txt
mechaship/mechaship_bringup/hooks/: mechaship_bringup.sh.in
mechaship/mechaship_bringup/launch/: mechaship_bringup.launch.py
mechaship/mechaship_bringup/param/: ntrip_info.yaml
mechaship/mechaship_bringup/scripts/: imu_reformatter.py
mechaship/mechaship_teleop/mechaship_teleop/: mechaship_teleop_joystick.py
mechaship/mechaship_yolov8/launch/: visualize.launch.py
mechaship/mechaship_yolov8/mechaship_yolov8/: detect_node.py  visualize_node.py
mechaship/mechaship_yolov8/model/: labels.txt
mechaship/mechaship_yolov8/param/: yolov8_params.yaml
mechaship/ntrip_client/scripts/: ntrip_ros_base.py
mechaship/rf2o_laser_odometry/: package.xml
mechaship/rf2o_laser_odometry/include/rf2o_laser_odometry/: CLaserOdometry2DNode.hpp
mechaship/rf2o_laser_odometry/src/: CLaserOdometry2DNode.cpp
